--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ nav a {
 /* Footer styles */
 footer {
     background-color: #373738;
-    color: #07dd03;
+    color: #fff;
     text-align: center;
     padding: 10px;
 }
